Correcting somes issues

--- a/html/Login.html
+++ b/html/Login.html
@@ -31,7 +31,7 @@
           <button type="submit" class="btn">Login</button>
 
           <div class="link-text">
-            <p>Don't have an account? <a href="/Lab%203%20assignment%20(3)/Lab_assignment_4/html/Sign%20Up.html">Sign up here</a></p>
+            <p>Don't have an account? <a href="/Lab%203%20assignment%20(3)/Lab_assignment_4/html/SignUp.html">Sign up here</a></p>
           </div>
         </form>
       </div>
